<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>


    <string name="action_settings">Settings</string>
    <string name="weightLabel">Weight:</string>
    <string name="milesRanLabel">Miles Ran:</string>
    <string name="caloriesBurnedLabel">Calories Burned:</string>
    <string name="heightLabel">Height</string>
    <string name="bmiLabel">BMI</string>
    <string name="nameLabel">Name</string>
    <string name="weight_pounds">000</string>
    <string name="miles_ran">1</string>
    <string name="calories_burned">00.0</string>
    <string name="bmi_total">00</string>

    <string-array name="height_feet_array">
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
    </string-array>

    <string-array name="height_inches_array">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
        <item >11</item>
    </string-array>


</resources>
